2007-11-08  Murray Cumming  <murrayc@murrayc.com>

	* glom/libglom/data_structure/print_layout.cc: Copy constructor 
	and operator=(): Copy the page_setup.
	* glom/mode_design/print_layouts/canvas_print_layout.cc:
	get_print_layout(), set_print_layout(): Actually load/save the 
	page setup.

2007-11-08  Murray Cumming  <murrayc@murrayc.com>

	* glom/mode_design/print_layouts/canvas_print_layout.cc:
	fill_with_data(): Don't crash if no fields are on the layout.
	* glom/printoperation_printlayout.cc:
	* glom/printoperation_printlayout.h: Handle the paginate 
	signal, though this probably requires the GTK+ patch in 
	bug #345345.

2007-11-07  Murray Cumming  <murrayc@murrayc.com>

	* glom/libglom/utils.cc:
	* glom/libglom/utils.h:
	* glom/utility_widgets/datawidget.cc:
	* glom/utility_widgets/db_adddel/db_adddel.cc:
	* glom/utility_widgets/db_adddel/glom_db_treemodel.cc:
	Some very minor comments next to some maemo-ifdefs.

2007-11-07  Murray Cumming  <murrayc@murrayc.com>

	* glom/libglom/data_structure/layout/layoutitem.cc:
	* glom/libglom/data_structure/layout/layoutitem.h: Added 
	get/set_print_layout_split_across_pages() for future use.

	* glom/libglom/document/document_glom.cc:
	* glom/libglom/document/document_glom.h:
	get/set_node_attribute_value_as_decimal(): Added a default parameter, 
	defaulting to 0, so we can use other values as defaults to avoid 
	superfluous attributes.
	Used this when loading and saving groups, because 1 column is 
	the default, and 0 is meaningless.
	
	* glom/utility_widgets/canvas/canvas_group_movable.cc:
	* glom/utility_widgets/canvas/canvas_group_movable.h:
	Store the x and y even before there is a child.

	* glom/utility_widgets/canvas/Makefile.am:
	* glom/utility_widgets/canvas/canvas_table_movable.cc:
	* glom/utility_widgets/canvas/canvas_table_movable.h:
	Added this canvas item.
	* glom/utility_widgets/canvas/canvas_item_movable.cc:
	Support the table item in the cast functions.